syntax = "proto3";
option java_package = "com.meijie.proto";
option java_outer_classname = "ClientRequestProtos";
option java_generate_equals_and_hash = true;

message ImMessageProto {
    string content =1;
    int64 sender = 2;
    int64 receiver = 3; // 当是为Group的消息就是一个Group ID 当是Client消息就是一个Client ID
    int64 version = 4;
    int64 time = 5;
}

message ImMessageListProto {
    repeated ImMessageProto imMessageList = 1;
}

message MessageRequestProto {
    int64 sender = 1;
    int64 receiver = 2;
    int64 version = 3;
}

message MessageSendRequestProto {
    ImMessageProto message = 1;
    int64 messageIdentify = 2;
}

message MessageResponseAckProto {
    int64 messageIdentify = 1;
}

message FileRequestProto {
    int64 fileId = 1;
}

message ImFileProto {
    bytes file = 1;
    int64 fileId = 2;
}

message FileSendRequestProto {
    bytes file = 1;
    int64 messageIdentify = 2;
}

message FileResponseAckProto {
    int64 fileId = 1;
    int64 messageIdentify = 2;
}